--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
     <header>
         <div class="inner">
             <div class="head-container">
-                <div> 헤더</div>
-                <div>헤더 입니다</div>
+                <div class="head-title"> 헤더</div>
+                <div class="head-item">헤더 입니다</div>
             </div>
         </div>
     </header>
