--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
     <header>
         <div class="inner">
             <div class="head-container">
-                <div class="head-title"> 헤더</div>
-                <div class="head-item">헤더 입니다</div>
+                <div class="head-title"><a href="https://www.naver.com/">헤더</a> </div>
+                <div class="head-item "><a href="https://www.youtube.com/">헤더 입니다</a> </div>
             </div>
         </div>
     </header>
