--- a/test.html
+++ b/test.html
@@ -19,7 +19,19 @@
             </div>
         </div>
     </header>
-    <section></section>
+    <section class="main">
+        <div class="main-container">
+            <div class="inner">
+                <div class="title-container">
+                    <div class="title">타이틀</div>
+                    <div class="message">안녕하세요 안녕하세요 안녕하세요<br />
+                        안녕하세요 안녕하세요 안녕하세요안녕하세요 안녕하세요 안녕하세요<br />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <footer> </footer>
 
 
