--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
     <meta name="keywords" />
     <meta name="author" />
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/f1def33959.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,7 +31,38 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    <section class="inner">
+        <div class="skill-container">
+            <div class="skill">
+                <i class="fab fa-python skill-icon python-style"></i>
+                <div class="skill-title">
+                    <div class="skill-name">업무 자동화</div>
+                    <div class="skill-usage">크롤링/자동매매</div>
+                </div>
+            </div>
+            <div class="skill">
+                <i class="fab fa-python skill-icon python-style"></i>
+                <div class="skill-title">
+                    <div class="skill-name">업무 자동화</div>
+                    <div class="skill-usage">크롤링/자동매매</div>
+                </div>
+            </div>
+            <div class="skill">
+                <i class="fab fa-python skill-icon python-style"></i>
+                <div class="skill-title">
+                    <div class="skill-name">업무 자동화</div>
+                    <div class="skill-usage">크롤링/자동매매</div>
+                </div>
+            </div>
+            <div class="skill">
+                <i class="fab fa-python skill-icon python-style"></i>
+                <div class="skill-title">
+                    <div class="skill-name">업무 자동화</div>
+                    <div class="skill-usage">크롤링/자동매매</div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer> </footer>
 
