--- a/test.html
+++ b/test.html
@@ -64,9 +64,22 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="inner">
+            <div class="roadmap-container">
+                <div class="roadmap-title-container">
+                    <div class="roadmap-title">타이틀 제목 작성 칸</div>
+                    <div class="arrow-container">
+                        <div>
+                            <-- </div>
+                                <div> --></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="class-list-container">ㅇㅇ</div>
+            </div>
+    </section>
     <footer> </footer>
-
-
 </body>
 
 </html>
